# CursoFastApi

fast_zero/: .coverage  database.db  pyproject.toml
fast_zero/fast_zero/: app.py  models.py  schemas.py  settings.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: e0820a815c3f_create_created_at.py  fdd52c621d08_create_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py
