[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Regiane <regianemelo1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
